--- a/src/CursoSymfony/EventosBundle/Resources/views/Evento/eventos.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/Evento/eventos.html.twig
@@ -6,7 +6,7 @@
                     {{ evento.hora | date('H:i') }} - {{ evento.horaFinalizacion | date('H:i') }}
                 </div>
                 <div class="grid_10 omega">
-                    <a href="#RUTA_A_DETALLE">{{ evento.titulo }}</a>
+                    <a href="{{ path('evento', {'slug': evento.slug} ) }}">{{ evento.titulo }}</a>
                     <p>{{ evento.descripcion }}</p>
                 </div>
             </div>
