--- a/src/CursoSymfony/EventosBundle/Resources/views/Evento/evento.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/Evento/evento.html.twig
@@ -14,6 +14,6 @@
  <strong>Disertante</strong> <a href="{{path('disertantes')}}">{{ evento.disertante }}</a>
 </div>
 <div class="grid_3 omega">
-
+<a href="{{ path('eventos') }}">Volver a Eventos</a>
 </div>
 </body></html> <!-- borrar -->
