Practico 10 - Extendiero los twig de las paginas estaticas

--- a/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "base.html.twig" %}
 {% block header %}
     <h1 class="grid_5"><a href="#RUTA_A_PORTADA">Symfony 2014</a></h1>
     <nav class="grid_11">
