--- a/src/CursoSymfony/EventosBundle/Resources/views/Evento/eventos.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/Evento/eventos.html.twig
@@ -8,7 +8,7 @@
 {% block pageid 'eventos' %}
 
     {% block contenido %}
-        {# CONTENIDO ORIGINAL DEL ARCHIVO Y SIN LAS ETIQUETAS <html><body> … </body></html> #}
+        {# CONTENIDO ORIGINAL DEL ARCHIVO Y SIN LAS ETIQUETAS <html><body> ï¿½ </body></html> #}
 
         <h1>Eventos</h1>
         {% for evento in eventos %}
