--- a/src/CursoSymfony/EventosBundle/Resources/views/layout-admin.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/layout-admin.html.twig
@@ -1,9 +1,9 @@
-{% extends "::base.html.twig" %}
+{% extends "base.html.twig" %}
 {% block header %}
-    <h1 class="grid_5 alpha"><a href="{{ path('admin_portada') }}">Gestión de eventos</a></h1>
+    <h1 class="grid_5 alpha"><a href="{{ path('admin_portada') }}">Gesti&oacute;n de eventos</a></h1>
     <nav class="grid_11 omega">
         <ul>
-            <li><a href="{{ path('portada') }}">Sitio público</a></li>
+            <li><a href="{{ path('portada') }}">Sitio p&uacute;blico</a></li>
             <li><a href="{{ path('admin_evento_listar') }}">Eventos</a></li>
         </ul>
     </nav>
