--- a/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
@@ -5,7 +5,7 @@
         <ul>
             <li><a href="{{ path('eventos') }}">Eventos</a></li>
             <li><a href="{{ path('disertantes') }}">Disertantes</a></li>
-            <li><a href="#RUTA_A_CONSULTA">Consulta</a></li>
+            <li><a href="{{ path('consulta') }}">Consulta</a></li>
         </ul>
     </nav>
 {% endblock %}
