Practico 11 - Creacion Formulario Registracion Usuario

--- a/src/CursoSymfony/EventosBundle/Resources/views/Usuario/registro.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/Usuario/registro.html.twig
@@ -56,3 +56,22 @@
         </div>
         {{ form_end(form) }}
     {% endblock %}
+    {% block lateral %}
+        <div class="usuario">
+            <p>¿Ya estás registrado? <a href="#RUTA_A_LOGIN">Login</a></p>
+        </div>
+        <h3>¿Por qué asistir?</h3>
+        <ul>
+            <li>Nisl turpis suscipit mauris</li>
+            <li>Nullam varius et commodo pharetra</li>
+            <li>Nulla gravida orci a odio</li>
+        </ul>
+        <h3>Preguntas frecuentes</h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Curabitur pretium tincidunt lacus</li>
+            <li>Lacus eget pulvinar lacinia</li>
+        </ul>
+    {% endblock %}  
+
+
