--- a/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/layout.html.twig
@@ -6,6 +6,7 @@
             <li><a href="{{ path('eventos') }}">Eventos</a></li>
             <li><a href="{{ path('disertantes') }}">Disertantes</a></li>
             <li><a href="{{ path('consulta') }}">Consulta</a></li>
+            <li><a href="{{ path('registro') }}">Registrarse</a></li>
         </ul>
     </nav>
 {% endblock %}
