--- a/src/CursoSymfony/EventosBundle/Resources/views/layout-admin.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/layout-admin.html.twig
@@ -5,6 +5,7 @@
         <ul>
             <li><a href="{{ path('portada') }}">Sitio p&uacute;blico</a></li>
             <li><a href="{{ path('admin_evento_listar') }}">Eventos</a></li>
+            <li><a href="{{ path('admin_disertante_listar')}}">Disertantes</a></li>
         </ul>
     </nav>
     <h1>{{ block('title') }}</h1>
