--- a/src/CursoSymfony/EventosBundle/Resources/views/AdminEvento/listar.html.twig
+++ b/src/CursoSymfony/EventosBundle/Resources/views/AdminEvento/listar.html.twig
@@ -42,7 +42,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <a href="{{ path('admin_evento_nuevo') }}">Nuevo evento</a>
+            <a href="{{ path('admin_evento_nuevo') }}"> Nuevo </a>
         </div>
     {% endblock %}
 {% block javascripts %}
